# hueniversitypy

./: CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  Untitled.ipynb  pyproject.toml
.github/workflows/: build.yml  release.yml
docs/: Makefile  conf.py  make.bat
docs/_build/html/: .buildinfo  contributing.html  contributors.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: index.rst.txt  installation.rst.txt  readme.rst.txt  usage.rst.txt
docs/_build/html/source/: hueniversitypy.html  modules.html
docs/source/: hueniversitypy.rst  modules.rst
hueniversitypy/: Untitled.ipynb  theme_alberta.py  theme_mcgill.py  theme_toronto.py  theme_ubc.py
tests/: test_hueniversitypy.py  test_mcgill.py  test_theme_alberta.py  test_theme_mcgill.py  test_theme_toronto.py  test_theme_ubc.py
