[tool.poetry]
name = "hueniversitypy"
version = "0.1.0"
description = "Python Package for Visualization by Themes for Canadian Universities"
authors = ["Shivam Verma <vermashivam679@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
